# DiscreteGridSearch

./: CMakeLists.txt  LICENSE  README.md
Core/: Function.h  Problem.cpp  Problem.h  VariableWrapper.h
Samples/: CMakeLists.txt  main.cpp
Samples/backpack/: main.cpp
Solver/: GlobalOptimizationSolver.cpp  GlobalOptimizationSolver.h  Solver.h
Variation/: DiscreteVariation.h  Variation.h
